Closed Bug 261961 Opened 21 years ago Closed 21 years ago

thunderbird doesn't handle xremote requests correctly, crash if tbird already running

Categories

(Thunderbird :: General, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: bryner)

Details

(Keywords: crash, fixed-aviary1.0)

Attachments

(1 file)

spun off from bug 261315 comment 6. 1. start thunderbird (eg, I've got 2004092705-0.8). 2. start firefox (eg, I've got 2004092709-0.9). 3. in firefox, click either a mailto: link or select File > Send Link. results: get an alert dialog which says, "The file resource:///chrome/comm.jar!/content/navigator/navigator.xul cannot be found. Please check the location and try again." after I click OK in the alert, tbird crashes with this in the shell: ./run-mozilla.sh: line 451: 1034 Segmentation fault "$prog" ${1+"$@"} talkback wasn't part of the tbird build I had --will grab another build which has it.
nominating for aviary1.0.
Flags: blocking-aviary1.0?
forgot to note: I've got tbird set as my default mail/news client (and ffox as my default browser). running on linux fedora core 2 with the latest updates.
drat, talkback didn't appear when I crashed using 2004092805-0.8 tbird bits. :-\
is this a recent regression?
Summary: thunderbird doesn't handle xremote requests correctly → thunderbird doesn't handle xremote requests correctly, crash if tbird already running
(In reply to comment #4) > is this a recent regression? I have the same problem with thunderbird 0.8 (20040913) on RH9. Initially I have *no* remote commands. strace on mozilla-xremote-client -a thunderbird 'ping()' shows that "Thunderbird" is discovered. Amending thunderbird to use the progname "Thunderbird" for the -a parameter alows some functionality, but causes the "Alert: The file resource:///chrome/comm.jar!/content/navigator/navigator.xul cannot be found. Please check the location and try again. OK" and thunderbird silently terminates. I was able to get 0.7.3 working fine, issuing "mailto:"'s to the running copy.
> ... thunderbird silently terminates. If started from a terminal the error is: /usr/local/lib/thunderbird-0.8/run-mozilla.sh: line 451: 16693 Segmentation fault "$prog" ${1+"$@"}
Attached patch hack fixSplinter Review
I think this is the safest thing to do for Thunderbird 1.0. There are better things we can do after that to more generically find a handler for the URL and target it appropriately. With this patch, thunderbird will always fall through to the URILoader when opening a URL, so it will open a compose window via the mailto nsIContentHandler.
Attachment #160794 - Flags: superreview?(blizzard)
Attachment #160794 - Flags: review?(blizzard)
Comment on attachment 160794 [details] [diff] [review] hack fix I told Brian I'd review this for him.
Attachment #160794 - Flags: superreview?(blizzard)
Attachment #160794 - Flags: superreview+
Attachment #160794 - Flags: review?(blizzard)
Attachment #160794 - Flags: review+
Attachment #160794 - Flags: approval-aviary?
checked in on trunk (waiting for branch approval)
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment on attachment 160794 [details] [diff] [review] hack fix a=asa for aviary checkin.
Attachment #160794 - Flags: approval-aviary? → approval-aviary+
checked in on branch
Keywords: fixed-aviary1.0
Flags: blocking-aviary1.0?
vrfy'd fixed with tbird 2004100606-0.8 bits on linux fc2 (using gnome). thanks, for fixing this, brian!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: