Quick and dirty fix for Thunderbird failure to handle mailto urls from xremote (bug 261961). r+sr=mscott.